Added latest templates

--- a/test_data/test_templates/env_templates/dev/Namespaces/bss.yml.j2
+++ b/test_data/test_templates/env_templates/dev/Namespaces/bss.yml.j2
@@ -16,6 +16,9 @@ deployParameters:
   ENVGENE_CONFIG_TAG: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_TAG')| default('No Ref tag') }}"
   CORE_NAMESPACE: "{{current_env.name}}-core"
   BSS_NAMESPACE: "{{current_env.name}}-bss"
+{% if "test_val" in current_env.solution_structure %}
+  test_parameter: "bla bla bla"
+{% endif %}
 e2eParameters: {}
 technicalConfigurationParameters:
   CORE_NAMESPACE: "{{current_env.name}}-core"
