--- a/test_data/test_templates/env_templates/dev/Namespaces/datahub.yml.j2
+++ b/test_data/test_templates/env_templates/dev/Namespaces/datahub.yml.j2
@@ -1,5 +1,5 @@
 ---
-name: "{{current_env.name}}-core"
+name: "{{current_env.name}}-dh"
 tenantName: "{{current_env.env_template}}"
 credentialsId: ""
 labels:
@@ -9,20 +9,16 @@ isServerSideMerge: false
 cleanInstallApprovalRequired: false
 mergeDeployParametersAndE2EParameters: false
 profile:
-  name: dev_core
+  name: dev_bss
   baseline: dev
 deployParameters:
   ENVGENE_CONFIG_REF_NAME: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_REF_NAME')| default('No Ref Name') }}"
   ENVGENE_CONFIG_TAG: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_TAG')| default('No Ref tag') }}"
   CORE_NAMESPACE: "{{current_env.name}}-core"
   BSS_NAMESPACE: "{{current_env.name}}-bss"
-
 {% if "Cloud-Core-CRDS" in current_env.solution_structure %}
-  test_parameter: "bla bla bla"
-{% else %}
-  test_parameter_2: "bla bla bla"
+  test_parameter: "{{ current_env.solution_structure.postgres.bss.namespace }}"
 {% endif %}
-
 e2eParameters: {}
 technicalConfigurationParameters:
   CORE_NAMESPACE: "{{current_env.name}}-core"
