--- a/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app-core.yml.j2
+++ b/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app-core.yml.j2
@@ -21,6 +21,7 @@ e2eParameters: {}
 technicalConfigurationParameters:
   APP_CORE_NAMESPACE: "{{current_env.name}}-app-core"
   APP_NAMESPACE: "{{current_env.name}}-app"
-deployParameterSets: []
+deployParameterSets: 
+- "app-common"
 e2eParameterSets: []
 technicalConfigurationParameterSets: []
