Fixing the errors

--- a/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app.yml.j2
@@ -20,5 +20,6 @@ e2eParameters: {}
 technicalConfigurationParameters:
   APP_CORE_NAMESPACE: "{{current_env.name}}-app-core"
   APP_NAMESPACE: "{{current_env.name}}-app"
+deployParameterSets: []
 e2eParameterSets: []
 technicalConfigurationParameterSets: []
