--- a/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app.yml.j2
@@ -16,7 +16,7 @@ deployParameters:
   ENVGENE_CONFIG_TAG: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_TAG')| default('No Ref tag') }}"
   APP_CORE_NAMESPACE: "{{current_env.name}}-app-core"
   APP_NAMESPACE: "{{current_env.name}}-app"
-  test_parameter: "{{ current_env.solution_structure }}"
+  TEST_SS_1: "{{ current_env.solution_structure["Test-App-DB-Name"]["app-core"].namespace }}"
 e2eParameters: {}
 technicalConfigurationParameters:
   APP_CORE_NAMESPACE: "{{current_env.name}}-app-core"
