--- a/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app-core.yml.j2
+++ b/test_data/test_templates/env_templates/test-solution-structure-template/Namespaces/app-core.yml.j2
@@ -16,6 +16,12 @@ deployParameters:
   ENVGENE_CONFIG_TAG: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_TAG')| default('No Ref tag') }}"
   APP_CORE_NAMESPACE: "{{current_env.name}}-app-core"
   APP_NAMESPACE: "{{current_env.name}}-app"
+{% if "TEST-VALUE-IF-ENDIF" in current_env.solution_structure %}
+  TEST_PARAM_IF_ENDIF_1: "TEST_PARAM_IF_ENDIF_value"
+{% endif %}
+{% if "Test-App-Name" in current_env.solution_structure %}
+  TEST_PARAM_IF_ENDIF_2: "TEST_PARAM_IF_ENDIF_2_value"
+{% endif %}
 e2eParameters: {}
 technicalConfigurationParameters:
   APP_CORE_NAMESPACE: "{{current_env.name}}-app-core"
