--- a/test_data/test_templates/env_templates/test-template-2/cloud.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-2/cloud.yml.j2
@@ -2,3 +2,4 @@
 name: "{{current_env.cloudNameWithCluster}}"
 e2eParameters: 
   CMDB_NAME: "{{current_env.cmdb_name}}"
+  TEMPLATE_NAME: "{{current_env.env_template}}"
