--- a/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
@@ -4,19 +4,19 @@ labels:
 - "Instance-{{current_env.name}}" #TC-003-002
 deployParameters:
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  Variable_1: "{{current_env.inventory.envTemplate.additionalTemplateVariables.Variable_1}}" #TC-003-018
+  Variable_1: "{{current_env.envTemplate.additionalTemplateVariables.Variable_1}}" #TC-003-018
   {% if "Test-App-Name" in current_env.solution_structure %}
     TEST_SD_VALUE_1: "TEST_SD_VALUE_1"
   {% endif %}
 e2eParameters:
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  Variable_2: "{{current_env.inventory.envTemplate.additionalTemplateVariables.Variable_2}}" #TC-003-018
+  Variable_2: "{{current_env.envTemplate.additionalTemplateVariables.Variable_2}}" #TC-003-018
   {% if "Test-App-Name" in current_env.solution_structure %}
     TEST_SD_VALUE_2: "TEST_SD_VALUE_2"
   {% endif %}
 technicalConfigurationParameters:
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  Variable_3: "{{current_env.inventory.envTemplate.additionalTemplateVariables.Variable_3}}" #TC-003-018
+  Variable_3: "{{current_env.envTemplate.additionalTemplateVariables.Variable_3}}" #TC-003-018
   {% if "Test-App-Name" in current_env.solution_structure %}
     TEST_SD_VALUE_3: "TEST_SD_VALUE_3"
   {% endif %}
