#156 Fixing the errors - updated the inventory

--- a/test_data/test_templates/env_templates/test-template-1/cloud.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/cloud.yml.j2
@@ -3,3 +3,5 @@ name: "{{current_env.cloud}}"
 e2eParameters: 
   CMDB_NAME: "{{current_env.cmdb_name}}"
   TEMPLATE_NAME: "{{current_env.env_template}}"
+deployParameters: {}
+technicalConfigurationParameters: {}
