#156 Fixing the errors - updated the inventory

--- a/test_data/test_templates/env_templates/test-template-1/cloud.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/cloud.yml.j2
@@ -5,3 +5,6 @@ e2eParameters:
   TEMPLATE_NAME: "{{current_env.env_template}}"
 deployParameters: {}
 technicalConfigurationParameters: {}
+deployParameterSets: []
+e2eParameterSets: []
+technicalConfigurationParameterSets: []
