--- a/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
@@ -3,6 +3,8 @@ name: "{{current_env.name}}-app" #TC-003-002
 labels:
 - "Instance-{{current_env.name}}" #TC-003-002
 deployParameters:
+  ENVGENE_CONFIG_REF_NAME: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_REF_NAME')| default('No Ref Name') }}"
+  ENVGENE_CONFIG_TAG: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_TAG')| default('No Ref tag') }}"
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
   Variable_1: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_1}}" #TC-003-018
 {% if "Test-App-Name" in current_env.solution_structure %}
