#156 Updated the inventory for testing

--- a/test_data/test_templates/parameters/app/test-parameters-1.yml.j2
+++ b/test_data/test_templates/parameters/app/test-parameters-1.yml.j2
@@ -15,5 +15,5 @@ parameters:
   PARAMETERS_CLOUD_PUBLIC_HOST: "{{current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST}}" #TC-003-021
 {% endif %}
 {% if "Test-App-Name" in current_env.solution_structure %}
-    PARAMETERS_SD_VALUE: "TPARAMETERS_SD_VALUE"
+  PARAMETERS_SD_VALUE: "PARAMETERS_SD_VALUE"
 {% endif %}
