#156 Updated the inventory for testing

--- a/test_data/test_templates/env_templates/test-template-2/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-2/Namespaces/app.yml.j2
@@ -1,5 +1,6 @@
 ---
 name: "{{current_env.name}}-app" #TC-003-002
+credentialsId: ""
 labels:
 - "Instance-{{current_env.name}}" #TC-003-002
 deployParameters:
