#156 Updated the inventory for testing

--- a/test_data/test_templates/env_templates/test-template-1/tenant.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/tenant.yml.j2
@@ -1,4 +1,5 @@
 name: "{{current_env.tenant}}"
 description: "{{current_env.description}}"
 owners: "{{current_env.owners}}"
+credential: ""
 deployParameters: {}
