--- a/test_data/test_templates/env_templates/test-template-1/tenant.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/tenant.yml.j2
@@ -1,5 +1,14 @@
 name: "{{current_env.tenant}}"
+registryName: "default"
 description: "{{current_env.description}}"
 owners: "{{current_env.owners}}"
-credential: ""
 deployParameters: {}
+globalE2EParameters:
+  pipelineDefaultRecipients: ""
+  recipientsStrategy: "merge"
+  mergeTenantsAndE2EParameters: false
+  environmentParameters: {}
+gitRepository: ""
+defaultBranch: ""
+credential: ""
+labels: []
