#156 Updated the inventory for testing

--- a/test_data/test_templates/env_templates/test-template-1/cloud.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/cloud.yml.j2
@@ -2,6 +2,7 @@
 name: "{{current_env.cloud}}"
 dbMode: "db"
 databases: []
+defaultCredentialsId: "admin-token"
 maasConfig:
   credentialsId: "maas"
   maasUrl: "http://maas.{{current_env.cluster.cloud_public_url}}"
