#156 Updated the inventory for testing

--- a/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
@@ -2,6 +2,7 @@
 name: "{{current_env.name}}-app" #TC-003-002
 labels:
 - "Instance-{{current_env.name}}" #TC-003-002
+credentialsId: ""
 isServerSideMerge: false
 cleanInstallApprovalRequired: false
 mergeDeployParametersAndE2EParameters: false
