--- a/test_data/test_templates/env_templates/test-template-2/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-2/Namespaces/app.yml.j2
@@ -1,32 +1,35 @@
 ---
 name: "{{current_env.name}}-app" #TC-003-002
-credentialsId: ""
 labels:
 - "Instance-{{current_env.name}}" #TC-003-002
+credentialsId: ""
+isServerSideMerge: false
+cleanInstallApprovalRequired: false
+mergeDeployParametersAndE2EParameters: false
 deployParameters:
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  {% if current_env.inventory.envTemplate.additionalTemplateVariables.Variable_1 is defined %} 
+{% if current_env.inventory.envTemplate.additionalTemplateVariables.Variable_1 is defined %} 
   Variable_1: "{{current_env.inventory.envTemplate.additionalTemplateVariables.Variable_1}}" #TC-003-019
-  {% endif %}
-  {% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
+{% endif %}
+{% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
   CLOUD_PUBLIC_HOST_1: "{{current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST}}" #TC-003-021
-  {% endif %}
+{% endif %}
 e2eParameters:
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  {% if current_env.inventory.envTemplate.additionalTemplateVariables.Variable_2 is defined %} 
+{% if current_env.inventory.envTemplate.additionalTemplateVariables.Variable_2 is defined %} 
   Variable_2: "{{current_env.inventory.envTemplate.additionalTemplateVariables.Variable_2}}" #TC-003-019
-  {% endif %}
-  {% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
+{% endif %}
+{% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
   CLOUD_PUBLIC_HOST_2: "{{current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST}}" #TC-003-021
-  {% endif %}
+{% endif %}
 technicalConfigurationParameters:
   APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  {% if current_env.inventory.envTemplate.additionalTemplateVariables.Variable_3 is defined %} 
+{% if current_env.inventory.envTemplate.additionalTemplateVariables.Variable_3 is defined %} 
   Variable_3: "{{current_env.inventory.envTemplate.additionalTemplateVariables.Variable_3}}" #TC-003-019
-  {% endif %}
-  {% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
+{% endif %}
+{% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
   CLOUD_PUBLIC_HOST_3: "{{current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST}}" #TC-003-021
-  {% endif %}
+{% endif %}
 deployParameterSets:
   - "test-parameters-1" #TC-003-002
 e2eParameterSets:
