--- a/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
+++ b/test_data/test_templates/env_templates/test-template-1/Namespaces/app.yml.j2
@@ -1,7 +1,7 @@
 ---
-name: "{{current_env.name}}-app" #TC-003-002
+name: "{{current_env.name}}-app"
 labels:
-- "Instance-{{current_env.name}}" #TC-003-002
+- "Instance-{{current_env.name}}"
 credentialsId: ""
 isServerSideMerge: false
 cleanInstallApprovalRequired: false
@@ -9,26 +9,26 @@ mergeDeployParametersAndE2EParameters: false
 deployParameters:
   ENVGENE_CONFIG_REF_NAME: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_REF_NAME')| default('No Ref Name') }}"
   ENVGENE_CONFIG_TAG: "{{ lookup('ansible.builtin.env', 'CI_COMMIT_TAG')| default('No Ref tag') }}"
-  APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  Variable_1: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_1}}" #TC-003-018
+  APP_NAMESPACE: "{{current_env.name}}-app"
+  Variable_1: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_1}}"
 {% if "Test-App-Name" in current_env.solution_structure %}
   TEST_SD_VALUE_1: "TEST_SD_VALUE_1"
 {% endif %}
 e2eParameters:
-  APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  Variable_2: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_2}}" #TC-003-018
+  APP_NAMESPACE: "{{current_env.name}}-app"
+  Variable_2: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_2}}
 {% if "Test-App-Name" in current_env.solution_structure %}
   TEST_SD_VALUE_2: "TEST_SD_VALUE_2"
 {% endif %}
 technicalConfigurationParameters:
-  APP_NAMESPACE: "{{current_env.name}}-app" #TC-003-002
-  Variable_3: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_3}}" #TC-003-018
+  APP_NAMESPACE: "{{current_env.name}}-app"
+  Variable_3: "{{env_definition.envTemplate.additionalTemplateVariables.Variable_3}}"
 {% if "Test-App-Name" in current_env.solution_structure %}
   TEST_SD_VALUE_3: "TEST_SD_VALUE_3"
 {% endif %}
 deployParameterSets:
-  - "test-parameters-1" #TC-003-002
+  - "test-parameters-1"
 e2eParameterSets:
-  - "test-parameters-1" #TC-003-002
+  - "test-parameters-1"
 technicalConfigurationParameterSets:
-  - "test-parameters-1" #TC-003-002
+  - "test-parameters-1"
