--- a/test_data/test_templates/parameters/app/test-parameters-1.yml.j2
+++ b/test_data/test_templates/parameters/app/test-parameters-1.yml.j2
@@ -1,18 +1,18 @@
 ---
 name: "test-parameters-1"
 parameters:
-  APP_NAMESPACE: "{{ current_env.name }}-app" #TC-001-002
+  APP_NAMESPACE: "{{ current_env.name }}-app"
 {% if env_definition.envTemplate.additionalTemplateVariables.Variable_1 is defined %} 
-  PARAMETERS_Variable_1: "{{ env_definition.envTemplate.additionalTemplateVariables.Variable_1 }}" #TC-003-018 TC-003-019
+  PARAMETERS_Variable_1: "{{ env_definition.envTemplate.additionalTemplateVariables.Variable_1 }}"
 {% endif %}
 {% if env_definition.envTemplate.additionalTemplateVariables.Variable_2 is defined %} 
-  PARAMETERS_Variable_2: "{{ env_definition.envTemplate.additionalTemplateVariables.Variable_2 }}" #TC-003-018 TC-003-019
+  PARAMETERS_Variable_2: "{{ env_definition.envTemplate.additionalTemplateVariables.Variable_2 }}"
 {% endif %}
 {% if env_definition.envTemplate.additionalTemplateVariables.Variable_3 is defined %} 
-  PARAMETERS_Variable_3: "{{ env_definition.envTemplate.additionalTemplateVariables.Variable_3 }}" #TC-003-018 TC-003-019
+  PARAMETERS_Variable_3: "{{ env_definition.envTemplate.additionalTemplateVariables.Variable_3 }}"
 {% endif %}
 {% if current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST is defined %}
-  PARAMETERS_CLOUD_PUBLIC_HOST: "{{current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST}}" #TC-003-021
+  PARAMETERS_CLOUD_PUBLIC_HOST: "{{current_env.cloudPassport.cloud.CLOUD_PUBLIC_HOST}}"
 {% endif %}
 {% if "Test-App-Name" in current_env.solution_structure %}
   PARAMETERS_SD_VALUE: "PARAMETERS_SD_VALUE"
